@@ -5,5 +5,5 @@ Abstract: The Asterisk PBX: A system administrator reference
 Section: Network/Communication
 
 Format: PDF
-Files: /usr/share/doc/asterisk-doc/doc/tex/asterisk.pdf.gz
+Files: /usr/share/doc/asterisk-doc/asterisk.pdf.gz
 
