@@ -5,6 +5,7 @@ CHANGES
 UPGRADE.txt
 UPGRADE-1.6.txt
 Zaptel-to-DAHDI.txt
-doc
-contrib
+doc/*.txt
+doc/*.pdf
+doc/tex/asterisk.pdf
 configs
